# Chess

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Piece.cpp  Piece.h  README.md  Renderer.cpp  Renderer.h  main.cpp
common/: Board.cpp  Board.h  CMakeLists.txt  Square.h  Uci.cpp  Uci.h
engine/: CMakeLists.txt  Eval.cpp  Eval.h  main.cpp
gui/: CMakeLists.txt  EngineProcess.cpp  EngineProcess.h  Renderer.cpp  Renderer.h  main.cpp
